--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Game Jam/Game Jam_WwiseProject/Originals/SFX/Footstep_Grass_1.akd
